Update Firebase config with real project credentials

--- a/index.html
+++ b/index.html
@@ -332,13 +332,13 @@
 
         // Firebase Configuration (Free tier)
         const firebaseConfig = {
-            apiKey: "AIzaSyBqXxXxXxXxXxXxXxXxXxXxXxXxXxX",
-            authDomain: "random-game-demo.firebaseapp.com",
-            databaseURL: "https://random-game-demo-default-rtdb.firebaseio.com",
-            projectId: "random-game-demo",
-            storageBucket: "random-game-demo.appspot.com",
-            messagingSenderId: "123456789012",
-            appId: "1:123456789012:web:abcdefghijklmnop"
+            apiKey: "AIzaSyAab6XaFgMoMzxGCM2Y9fyhpVOB2IVOFso",
+            authDomain: "august-bdb2d.firebaseapp.com",
+            databaseURL: "https://august-bdb2d-default-rtdb.firebaseio.com",
+            projectId: "august-bdb2d",
+            storageBucket: "august-bdb2d.firebasestorage.app",
+            messagingSenderId: "1058181113741",
+            appId: "1:1058181113741:web:430906f1c0883e751d3fc4"
         };
 
         // Initialize Firebase
