--- a/index.html
+++ b/index.html
@@ -317,18 +317,18 @@
         </div>
 
         <div class="game-container">
-            <!-- Cột Đội Công -->
+            <!-- Cột Gà Chiến -->
             <div class="team-section">
-                <h2>⚔️ Đội Công</h2>
+                <h2>⚔️ LEVEL A+ [GÀ CHIẾN]	</h2>
                 <div class="number-display" id="numberDisplayCong">?</div>
                 <button class="spin-button" id="spinButtonCong" onclick="spinNumber('Công')">
                     🎲 QUAY SỐ (Công)
                 </button>
             </div>
 
-            <!-- Cột Đội Thủ -->
+            <!-- Cột Gà Gáy -->
             <div class="team-section">
-                <h2>🛡️ Đội Thủ</h2>
+                <h2>🛡️ LEVEL A [GÀ GÁY]	</h2>
                 <div class="number-display" id="numberDisplayThu">?</div>
                 <button class="spin-button" id="spinButtonThu" onclick="spinNumber('Thủ')">
                     🎲 QUAY SỐ (Thủ)
@@ -371,12 +371,12 @@
         </div>
 
         <div class="info-section">
-            <h3>📊 Các số của Đội Công</h3>
+            <h3>📊 Các số của Gà Chiến</h3>
             <div class="numbers-grid" id="numbersGridCong"></div>
         </div>
 
         <div class="info-section">
-            <h3>📊 Các số của Đội Thủ</h3>
+            <h3>📊 Các số của Gà Gáy</h3>
             <div class="numbers-grid" id="numbersGridThu"></div>
         </div>
 
